--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,20 @@
 
 <body>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="container text-center">
             <h1>Mission to Mars</h1>
             <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
     </div>
 
-    <h3>{{mars.title}}</h3>
-    <p>{{mars.paragraph}}</p>
-
-
-    
+    <div class="container container-fluid">
+        <div class="row">
+            <h3>{{mars.title}}</h3>
+        </div>
+        <div class="row">
+            <p>{{mars.paragraph}}</p>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-8">
@@ -36,21 +39,18 @@
         </div>
     </div>
 
-    <h3>Mars Hemispheres</h3>
-
-      
-        <div class="col-lg-6">
-            {% for item in mars.hemispheres %}
-                <div class="card" style="width: 14rem;">
+    <div class="container container-fluid">
+        <h3>Mars Hemispheres</h3>
+        {% for item in mars.hemispheres %}
+            <div class="row">
+                <div class="card" style="width: 18rem;">
                     <img src="{{item.img_url}}" class="card-img-top" alt="{{item.title}}">
                     <div class="card-body">
                     <h5 class="card-title">{{item.title}}</h5>
                 </div>
-            {% endfor %}
-        </div>
-
- 
-    
+            </div>
+        {% endfor %}
+    </div>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
